book/tests/snapshots/snapshot__@language-features__syntax-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from foo\nselect [\n\tcircumference = diameter * 3.14159,\n\tcolor,\n\t]\nfilter circumference > 10 and color != \"red\"\n"
input_file: book/tests/prql/language-features/syntax-5.prql
---
WITH table_1 AS (
  SELECT
    diameter * 3.14159 AS circumference,
    color
  FROM
    foo
)
SELECT
  circumference,
  color
FROM
  table_1
WHERE
  circumference > 10
  AND color <> 'red'
