book/tests/snapshots/snapshot__@language-features__syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup [title, country] (\n  aggregate [\n    average salary,\n    ct = count\n  ]\n)\n"
input_file: book/tests/prql/language-features/syntax-7.prql
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country
