book/tests/snapshots/snapshot__@language-features__syntax-8.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees  # Comment 1\n# Comment 2\naggregate [average salary]\n"
input_file: book/tests/prql/language-features/syntax-8.prql
---
SELECT
  AVG(salary)
FROM
  employees
