book/tests/snapshots/snapshot__@language-features__syntax-9.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
input_file: book/tests/prql/language-features/syntax-9.prql
---
SELECT
  `first name`
FROM
  employees
