book/tests/snapshots/snapshot__@language-features__target-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nprql version:\"0.5\"\n\nfrom employees\n"
input_file: book/tests/prql/language-features/target-2.prql
---
SELECT
  *
FROM
  employees

